Major security and UI improvements
🎨 UI IMPROVEMENTS:
✅ Fixed white text on white background issue
✅ Added 4 theme options (Default, Dark, Blue, Green)
✅ Theme selector with color preview buttons
✅ Improved color contrast and readability
✅ Windows File Explorer styling maintained

🔐 SECURITY ENHANCEMENTS:
✅ Password hashing with bcrypt (12 rounds)
✅ Change password functionality
✅ Forgot password with reset tokens
✅ Rate limiting (auth: 5/15min, files: 50/min)
✅ Security headers (HSTS, CSP, etc.)
✅ Input validation and sanitization
✅ File upload security checks
✅ Request logging and monitoring
✅ Secure config file handling
✅ Security recommendations on startup

🛡️ PASSWORD MANAGEMENT:
✅ Change password dialog in UI
✅ Forgot password with server console tokens
✅ Reset password functionality
✅ Backward compatibility with plain text passwords
✅ Automatic password hashing migration

🔒 SECURITY FEATURES:
- Rate limiting on all auth endpoints
- Dangerous file extension blocking
- Path traversal protection
- XSS and injection prevention
- Secure file permissions validation
- Security event logging
- Environment variable recommendations
- HTTPS deployment guidance

The application now has enterprise-level security while maintaining
an intuitive Windows File Explorer interface with multiple themes!

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -71,10 +71,12 @@
             border-bottom: 1px solid transparent;
             cursor: pointer;
             font-size: 13px;
+            color: #333333;
         }
 
         .file-item:hover {
             background: #e3f2fd;
+            color: #1976d2;
         }
 
         .file-item.selected {
@@ -98,6 +100,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+            color: inherit;
         }
 
         .status-bar {
@@ -208,6 +211,121 @@
 
         .modal-button.primary:hover {
             background: #1976d2;
+        }
+
+        /* Theme System */
+        .theme-selector {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-right: 16px;
+        }
+
+        .theme-button {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            border: 2px solid #ccc;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .theme-button:hover {
+            transform: scale(1.1);
+            border-color: #666;
+        }
+
+        .theme-button.active {
+            border-color: #333;
+            box-shadow: 0 0 0 2px rgba(0,0,0,0.2);
+        }
+
+        /* Theme Variations */
+        .theme-default {
+            background: #f0f0f0;
+        }
+
+        .theme-dark {
+            background: #2d3748;
+            color: #e2e8f0;
+        }
+
+        .theme-dark .explorer-window {
+            background: #4a5568;
+            border-color: #2d3748;
+            color: #e2e8f0;
+        }
+
+        .theme-dark .toolbar {
+            background: #2d3748;
+            border-color: #1a202c;
+        }
+
+        .theme-dark .toolbar-button {
+            background: #4a5568;
+            border-color: #2d3748;
+            color: #e2e8f0;
+        }
+
+        .theme-dark .toolbar-button:hover {
+            background: #718096;
+        }
+
+        .theme-dark .address-bar {
+            background: #4a5568;
+            border-color: #2d3748;
+            color: #e2e8f0;
+        }
+
+        .theme-dark .file-item {
+            color: #e2e8f0;
+        }
+
+        .theme-dark .file-item:hover {
+            background: #718096;
+            color: #ffffff;
+        }
+
+        .theme-dark .status-bar {
+            background: #2d3748;
+            border-color: #1a202c;
+            color: #a0aec0;
+        }
+
+        .theme-blue {
+            background: #ebf8ff;
+        }
+
+        .theme-blue .explorer-window {
+            background: #bee3f8;
+            border-color: #90cdf4;
+        }
+
+        .theme-blue .toolbar {
+            background: #90cdf4;
+            border-color: #63b3ed;
+        }
+
+        .theme-blue .file-item {
+            color: #1a365d;
+        }
+
+        .theme-green {
+            background: #f0fff4;
+        }
+
+        .theme-green .explorer-window {
+            background: #c6f6d5;
+            border-color: #9ae6b4;
+        }
+
+        .theme-green .toolbar {
+            background: #9ae6b4;
+            border-color: #68d391;
+        }
+
+        .theme-green .file-item {
+            color: #1a202c;
         }
     </style>
 </head>
